<resources>
    <string name="app_name">Sprinter</string>
    <string name="action_settings">Settings</string>
    <string name="time_zero">00:00:000</string>
    <string name="start_react">start reaction</string>
    <string name="stop_react">stop reaction</string>
    <string name="reaction_sensitivity">Reaction Sensitivity</string>
    <string name="starting_reaction">Starting Reaction</string>
    <string name="stopping_reaction">Stopping Reaction</string>
    <string name="save">Save</string>
    <string name="sensor_delay">Sensor Delay After Timer Starts</string>
    <string name="start_without_stop_reaction">Start Without Stop Reaction</string>
    <string name="start_time">Start Timer</string>
    <string name="stop_time">Stop Timer</string>
    <string name="reset_time">Reset Timer</string>
    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="ms">ms</string>
    <string name="distance">Distance:</string>
    <string name="time2">Time:</string>
    <string name="meters">meters</string>
    <string name="records">Records</string>
    <string name="settings">Settings</string>
    <string name="select">Select a Date</string>
    <string name="delete">Delete</string>
    <string name="speed">Speed:</string>
    <string name="record">Record</string>
    <string name="update">Update</string>
    <string name="are_you_sure">Are you sure you want to delete this?</string>
    <string name="record_deleted">The record has been deleted.</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="view_record">View Record</string>
    <string name="remove_times">Remove Times</string>
    <string name="record_times">Record Times</string>
    <string name="instructions">Instructions</string>
    <string name="m_s">m/s</string>
    <string name="first_segment">
        Instruction guide \n\nTo get the most of this application please read the instructions carefully.
        \n\nThe phone should be placed on a part of the body that has little to no movement. The best
        way to do this is to use a phone case, to attach the phone at the hip like in the image below.
        The phone can be placed in your pocket but that may require more fine tuned adjustments in the
        settings page.\n\nNote: It is still recommended to configure settings even if the phone is attached
        at the hip.
    </string>
    <string name="second_segment">
        Below are descriptions for each of the buttons on the main page. \n\nTo use the start reaction
        button, first get into a stationary position. Then press the button. When the button is pressed
        your built in accelerometer is turned on. At that point you can start to sprint. If the settings
        configurations match your acceleration then the timer will start. \n\nImportant: When you reach
        the end of the sprint, you must attempt to slow down rapidly. That deceleration will cause the
        timer to stop. \n\nIf you pressed the start
        reaction button before you felt you were ready, then you can press the stop reaction button
        to turn off the accelerometer. \n\nIf you would rather stop the timer manually instead of having
        to stop abruptly, then press the start without stop reaction instead of start reaction. \n\nThe
        record times button temporarily stores any time currently on the timer, in the list titled
        "Recorded Times" \n\nThe remove times clears the "Recorded Times" list. \n\nTo manually start and stop
        the timer, you have the start timer and stop timer buttons. \n\nTo reset the timer, you press
        the reset timer button. \n\nWhen a time is recorded, you have the option to enter the distance
        ran with it. If nothing is entered, then the distance defaults to zero. You must press the save button
        to save the time in your records. \n\nRecords/Calendar Screen \n\nThe calendar marks in purple,
        the current date. To switch between months swipe on the calendar left or right. The green highlighted
        dates show which dates have records with them. Select a date and press the view records button
        to see the records. \n\nSettings \nThe starting reaction text, sets how quickly you must accelerate
        for the timer to start. \n\nThe stopping reaction text, sets how quickly you must decelerate for
        the timer to stop. \n\nThe sensor delay, makes it so that the accelerometer shuts off for a that
        period of time after the timer starts. This way you have time to reach a near constant speed. It also
        helps improve accuracy if you know how long you expect to run. If you know you will run 12 seconds
        in a 100 meters, then setting the delay to 10 seconds will help with timer results.
    </string>
    <string name="the_selected_date_is">\tThe selected date is:</string>
</resources>
