<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/field"
    android:scrollbarThumbVertical="@android:color/darker_gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainScreenActivity"
    tools:showIn="@layout/activity_main_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/startReact"
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/start_react"
            android:onClick="startReaction"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"/>

        <Button
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:layout_alignTop="@+id/startReact"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/stop_react"
            android:onClick="stopReaction"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text" />

        <Button
            android:layout_width="304dp"
            android:layout_height="62dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/start_without_stop_reaction"
            android:onClick="startNoStopReaction"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"/>

        <Button
            android:id="@+id/lapT"
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:layout_marginTop="180dp"
            android:layout_alignStart="@+id/startReact"
            android:text="@string/record_times"
            android:onClick="lapWatchTimer"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"/>

        <Button
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:layout_alignTop="@+id/lapT"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/remove_times"
            android:onClick="removeLaps"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"/>

        <TextView
            android:id="@+id/time1"
            android:layout_width="303dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="260dp"
            android:gravity="center"
            android:text="@string/time_zero"
            android:textSize="22sp"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"/>

    </RelativeLayout>

        <ListView
            android:nestedScrollingEnabled="true"
            android:id="@+id/times"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/draw_border"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/startT"
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/start_time"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"/>

        <Button
            android:id="@+id/stopT"
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:layout_alignTop="@+id/startT"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/stop_time"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"/>

        <Button
            android:id="@+id/resetT"
            android:layout_centerHorizontal="true"
            android:layout_width="303dp"
            android:layout_height="62dp"
            android:layout_marginTop="110dp"
            android:text="@string/reset_time"
            android:onClick="resetWatchTimer"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"/>

        <Button
            android:id="@+id/lapT2"
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:layout_marginTop="190dp"
            android:layout_alignStart="@+id/startT"
            android:text="@string/record_times"
            android:onClick="lapWatchTimer"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"/>

        <Button
            android:layout_width="142dp"
            android:layout_height="62dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/lapT2"
            android:layout_marginEnd="20dp"
            android:text="@string/remove_times"
            android:onClick="removeLaps"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"
            />

    </RelativeLayout>


    </LinearLayout>

</ScrollView>

    <!--android:background="@drawable/draw_border"-->