<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

            <TextView
                android:id="@+id/lapTimeLabel"
                android:layout_width="81dp"
                android:layout_height="46dp"
                android:text="@string/time2"
                android:textSize="22sp"
                android:layout_marginStart="5dp"
                android:textColor="@drawable/text"/>

            <TextView
                android:id="@+id/lapTimeView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="22sp"
                android:text=""
                android:layout_toEndOf="@+id/lapTimeLabel"
                android:layout_marginStart="10dp"
                android:textColor="@drawable/text"/>

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:text="@string/distance"
                android:textSize="22sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="60dp"
                android:textColor="@drawable/text"/>

            <EditText
                android:id="@+id/editDistanceText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/distanceLabel"
                android:ems="10"
                android:inputType="number"
                android:layout_marginTop="60dp"
                android:textColor="@drawable/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meters"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/editDistanceText"
                android:textSize="22sp"
                android:layout_marginTop="60dp"
                android:textColor="@drawable/text"/>


        <Button
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/save"
            android:onClick="saveSprint"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:textColor="@drawable/text"/>

</RelativeLayout>

<!-- android:background="@drawable/button_background"
            android:textColor="@drawable/text"-->